--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "",
+    "js-cookie": "^2.2.0",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
