--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
+    "svg-sprite-loader": "^4.1.6",
     "vue": "^2.5.2",
     "vue-router": "3.0.2",
     "vuex": "^3.1.1"
